Fix spacing on three column mode media title block

--- a/app/static/less/theme.less
+++ b/app/static/less/theme.less
@@ -213,3 +213,12 @@
     }
   }
 }
+
+@media all and (max-width: 767px) {
+  .feature-large.three-column {
+    div[class*='col-'] {
+      padding-top: 2em;
+      padding-bottom: 2em;
+    }
+  }
+}
